[gd_scene load_steps=5 format=3 uid="uid://cedvmajx2qnq2"]

[ext_resource type="Script" path="res://assets/objects/player/player.gd" id="1_5nvky"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(12, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rulo"]
size = Vector2(6, 3)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
platform_floor_layers = 4294967288
script = ExtResource("1_5nvky")

[node name="Stacklings" type="Node2D" parent="."]

[node name="TopRoot" type="Node2D" parent="Stacklings"]
position = Vector2(0, -16)

[node name="BottomRoot" type="Node2D" parent="Stacklings"]

[node name="SoloHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("1")

[node name="DuoHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("2")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -15)
position_smoothing_enabled = true
position_smoothing_speed = 15.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="StompArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_2rulo")

[connection signal="area_entered" from="StompArea" to="." method="_on_stomp_area_area_entered"]
